# syslogserver_to_cloudwatch

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  pyproject.toml  setup.cfg  test_log.py
.github/workflows/: publish-to-pypi.yml
