[tool.poetry]
name = "syslogserver_to_cloudwatch"
version = "0.1.0"
description = "SysLog server that sends LogEvents to AWS Cloudwatch"
authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = ">=1.34"

[tool.poetry.group.dev.dependencies]
black = "*"
boto3-stubs = ">=1.34"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
